examples/errors/oop_private_field.vut
class Student(name) {
    _id = 1
}

let s = Student("nam")
out(s._id)
